Maquetamos y estilamos header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>BatataBit</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Hola mundo</p>
+    <header>
+        <img src="https://i.postimg.cc/HL9yL5Sy/logo-png.png" alt="">
+        <div class="header__titles-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a class="header__button" href="plans">Conoce Nuestros Planes <span></span></a>
+        </div>
+    </header>
 </body>
 </html>
