--- a/index.html
+++ b/index.html
@@ -21,5 +21,105 @@
             <a class="header__button" href="plans">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
+    <main>
+        <section class="main__exchange-container">
+            <div class="main__background-img"></div>
+            <div class="main__exchange-container--titles">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main__tables-container">
+                <d
+                
+                iv class="currency-table">
+                    <p class="currency-table__title">Monedas</p>
+                    <div class="currency-table__container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$ 1.96 <span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__center-left">Ethereum</td>
+                                <td class="table__center-right table__right">$ 0.07 <span class="up"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__center-left">Ripple</td>
+                                <td class="table__center-right table__right">$ 2.15 <span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table__date">
+                        <p><b>Actualizado:</b> 19 Julio 23:45</p>
+                    </div>
+                </d>
+                <div class="commissions-table">
+                    <p class="commissions-table__title">Comisiones</p>
+                    <div class="commissions-table__container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$ 12.96</td>
+                            </tr>
+                            <tr>
+                                <td class="table__center-left">Bitpreco</td>
+                                <td class="table__center-right table__right">$ 13.07</td>
+                            </tr>
+                            <tr>
+                                <td class="table__center-left">Novadax</td>
+                                <td class="table__center-right table__right">$ 13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$ 14.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="commissions-table__date">
+                        <p><b>Actualizado:</b> 19 Julio 23:48</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section class="main__product-details">
+            <span class="main__batatabit-logo"></span>
+            <div class="main__product-details--titles">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="main__product-details--cards">
+                <article class="product-details--card">
+                    <span class="clock"></span>
+                    <p class="card__title">Tiempo real</p>
+                    <p class="card__body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="product-details--card">
+                    <span class="eye"></span>
+                    <p class="card__title">No hay tasas escondidas</p>
+                    <p class="card__body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-details--card">
+                    <span class="dollar"></span>
+                    <p class="card__title">Compara monedas</p>
+                    <p class="card__body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-details--card">
+                    <span class="check"></span>
+                    <p class="card__title">Información confiable</p>
+                    <p class="card__body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
+        <section class="bitcoin-img__container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
