--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header__titles-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a class="header__button" href="plans">Conoce Nuestros Planes <span></span></a>
+            <a class="header__button" href="#plans">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -29,9 +29,7 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main__tables-container">
-                <d
-                
-                iv class="currency-table">
+                <div class="currency-table">
                     <p class="currency-table__title">Monedas</p>
                     <div class="currency-table__container">
                         <table>
@@ -56,7 +54,7 @@
                     <div class="currency-table__date">
                         <p><b>Actualizado:</b> 19 Julio 23:45</p>
                     </div>
-                </d>
+                </div>
                 <div class="commissions-table">
                     <p class="commissions-table__title">Comisiones</p>
                     <div class="commissions-table__container">
@@ -117,9 +115,51 @@
         <section class="bitcoin-img__container">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section>
-
+        <section id="plans" class="main__plans-container">
+            <div class="main__plans-container--titles">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="main__plans-container--slide">
+                <article class="plans-container--card">
+                    <div class="plan-container--info">
+                        <h3 class="plan__title">Pago Mensual</h3>
+                        <p class="plan__price"><span>$</span>12</p>
+                        <p class="plan__saving">*Pagas $44 más comparado al plan anual.</p>
+                        <button class="plan__ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-container--info">
+                        <h3 class="plan__title">Pago Anual</h3>
+                        <p class="plan__price"><span>$</span>100</p>
+                        <p class="plan__saving">*Ahorras $44 comparado al plan mensual.</p>
+                        <button class="plan__ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <div class="plan-container--info">
+                        <h3 class="plan__title">Pago Semestral</h3>
+                        <p class="plan__price"><span>$</span>60</p>
+                        <p class="plan__saving">*Ahorras $24 comparado al plan mensual.</p>
+                        <button class="plan__ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+            </section>
         </section>
     </main>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="https://i.postimg.cc/pT05fvMV/logo-footer-png.png" alt="">
+        </section>
+    </footer>
 </body>
 </html>
